fix: move overflow-x style from app-home to app-cta

--- a/src/components/app-cta/app-cta.scss
+++ b/src/components/app-cta/app-cta.scss
@@ -1,6 +1,7 @@
 .cta {
   height: 344px;
-
+  overflow-x: hidden;
+  
   @include media-breakpoint-down(sm) {
     height: 780px;
   }
