--- a/src/pages/app-home/app-home.scss
+++ b/src/pages/app-home/app-home.scss
@@ -1,5 +1,4 @@
 .home {
-  overflow-x: hidden;
   font-family: 'Muli', sans-serif;
 
   .hero {
